--- a/temples.html
+++ b/temples.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - Temples</title>
-    <meta name="description" content="This is a page that contains a dynamic display of temples that changes dramatically based on the javascript in the temples.js file.">
+    <meta name="description" content="This is a page that contains a dynamic display of temples that changes dramatically based on the javascript in the temples files.">
     <meta name="author" content="Ezekiel M. Wilcox">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script src="scripts/temples.js" defer></script>
 </head>
 <body>
+    <button id="menu"></button>
     <header>
-        <h1>Temple Album</h1>
-        <nav>
+        <h2 >Temple Album</h2>
+        <nav class="navigation" >
             <a href="temples.html">Home</a>
             <a href="TBD">Old</a>
             <a href="TBD">new</a>
@@ -22,12 +23,49 @@
             <a href="TBD">Small</a>
         </nav>
     </header>
-    <main class="home-grid">
-
+    <main>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
+        <figure>
+            <img class="hover" src="images/san_diego_temple.jpeg" loading="lazy">
+            <figcaption>San Diego Temple - California</figcaption>
+        </figure>
     </main>
     <footer>
         <p>&copy;<span id="currentyear"></span> | Ezekiel Mason Wilcox | California</p>
         <p class="red"><span id="lastModified"></span></p>
     </footer>
+        <script src="./temples.js"></script>
+        <script src="./scripts/index.js"></script>
 </body>
 </html>
